--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,44 @@
-.App {
-  text-align: center;
+.main-container{
+  width: 100vw;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.navbar{
+  width: 100vw;
+  height: 10vh;
+  background-color: black;
+  color: #fff;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  list-style: none;
+  margin: 0;
+  font-size: 1.5cm;
+  font-weight: 600;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.components{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.component-container{
+  width: 30%;
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 50vh;
+
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.component-img{
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
 }
